# dandori-project

./: .gitignore  README.md  main.py  pyproject.toml
airflow_home/: airflow.cfg  standalone_admin_password.txt
airflow_home/dags/: random_example.py  udemy_course.py
mlruns/0/: meta.yaml
src/: 01_intro.py
src/02-experiment-tracking/: hpo.py  process_data.py  register_model.py  rfr_config.yaml  train.py
src/04-deployment/: Dockerfile  requirements.txt  solution.ipynb  solution.py
src/05-monitoring/: baseline_model_nyc_taxi_data.ipynb  docker-compose.yml  pyproject.toml
src/05-monitoring/.config/: grafana_datasources.yaml
