[project]
name = "demeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "mlflow>=2.22.0",
    "plotly>=6.0.1",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "setuptools>=80.7.1",
    "xgboost>=3.0.0",
]
