[project]
name = "dandori-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "mlflow~=3.1",
    "plotly>=6.0.1",
    "polars~=1.29",
    "scikit-learn>=1.5,<1.6",
    "setuptools>=80.7.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
