[project]
name = "05-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.6.0",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "numpy>=2.0.2",
    "polars>=1.29.0",
    "prefect>=3.4.6",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
    "tqdm>=4.67.1",
]
